--- a/FrontEnd/sass/3-Layout/_produit.scss
+++ b/FrontEnd/sass/3-Layout/_produit.scss
@@ -61,6 +61,9 @@
 
 .produit_PageSecondaire {
     display: flex;
+    @include responsive(tablet-up) {
+        flex-direction: column;
+        }
 }
 
 .produit__Picture_PageSecondaire {
