--- a/FrontEnd/css/main.css
+++ b/FrontEnd/css/main.css
@@ -421,9 +421,7 @@ li {
   -ms-grid-rows: auto;
       grid-template-rows: auto;
   grid-row-gap: 1rem;
-      grid-template-areas: "main__Panier_container"
- "container__Recapitulatif"
- "panier__Final_Price";
+      grid-template-areas: "main__Panier_container" "container__Recapitulatif" "panier__Final_Price";
 }
 
 .main__Panier_container {
@@ -676,7 +674,7 @@ form textarea {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: 1px;
+  border: 1;
   border-radius: 2rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -723,7 +721,7 @@ form textarea {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: 1px;
+  border: 1;
   border-radius: 2rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -766,7 +764,7 @@ form textarea {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: 1px;
+  border: 1;
   border-radius: 2rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -800,7 +798,7 @@ form textarea {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: 1px;
+  border: 1;
   border-radius: 2rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
